--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ tdsrersmtyf,dsreerstdytrerhrytrthegrtkeuyktrthegrytkurtrthegrtuktrhegwferrytrteg
 <iframe width="758" height="426" src="https://www.youtube.com/embed/vKqHlFRxBXc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <p>
-//**********************       댓             글
+/* *********************       댓             글
 <div id="disqus_thread"></div>
 <script>
 
@@ -45,7 +45,10 @@ s.setAttribute('data-timestamp', +new Date());
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
-// **************************
+
+
+<script id="dsq-count-scr" src="//hobby-2.disqus.com/count.js" async></script>
+/* *************************
 </P>
 </body>
 
