--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
 <body>
   <h1><a href="index.html">  WEB </a></h1>
   <ol>
-  <li><a href="1.html"> HTML </a></li>
-  <li><a href="2.html"> CSS </a></li>
-  <li><a href="3.html"> JavaScript </a></li>
-  <li><a href="4.html"> 채팅 </a></li>
+  <li><a href="1.html"> <font color="red">HTML </font></a></li>
+  <li><a href="2.html"> <font color="red">CSS </font></a></li>
+  <li><a href="3.html"> <font color="red">JavaScript </font></a></li>
   </ol>
 
 tdsrersmtyf,dsreerstdytrerhrytrthegrtkeuyktrthegrytkurtrthegrtuktrhegwferrytrtegetrregwgeryhregehergyrrheguhgj5yhtgr35e6ryttyutryyg45y
