--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@
   </ol>
 
 tdsrersmtyf,dsreerstdytrerhrytrthegrtkeuyktrthegrytkurtrthegrtuktrhegwferrytrtegetrregwgeryhregehergyrrheguhgj5yhtgr35e6ryttyutryyg45y
-/** 동영상
+<!-- * 주석 동영상
 <iframe width="758" height="426" src="https://www.youtube.com/embed/vKqHlFRxBXc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 */
+-->
 
 
+<!-- /* *********************       댓글  -->
 <p>
-/* *********************       댓             글
 <div id="disqus_thread"></div>
 <script>
 
@@ -69,7 +70,7 @@ s.setAttribute('data-timestamp', +new Date());
 
 
 
-/*    채팅    */
+<!--    채팅     -->
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
@@ -83,9 +84,6 @@ s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
 <!--End of Tawk.to Script-->
-
-
-
 
 
 
